[gd_scene load_steps=41 format=3 uid="uid://duqvtvxqoyvgj"]

[ext_resource type="PackedScene" uid="uid://doa5hxcckh64o" path="res://prefab/enemys/EnemyHUD.tscn" id="1_e25t5"]
[ext_resource type="Script" path="res://scripts/EnemyStats.gd" id="1_rni5g"]
[ext_resource type="Script" path="res://prefab/enemys/EnemyFungy.gd" id="1_tp4yf"]
[ext_resource type="PackedScene" uid="uid://kbo1bay3i1ps" path="res://prefab/utils/PlayerDetector.tscn" id="2_cuwi8"]
[ext_resource type="PackedScene" uid="uid://c4qwbfsr4fe74" path="res://prefab/effects/HitEffect.tscn" id="2_kr1ik"]
[ext_resource type="PackedScene" uid="uid://cblcbsx1gpy2q" path="res://prefab/effects/DeathEffect.tscn" id="3_i8ij2"]
[ext_resource type="Texture2D" uid="uid://csmmas47a7m66" path="res://assets/Enemies/mushroom.png" id="3_snscc"]
[ext_resource type="Script" path="res://prefab/enemys/EnemyWeapon.gd" id="7_2ci0n"]
[ext_resource type="PackedScene" uid="uid://ebdq15holk57" path="res://prefab/utils/Softcollision.tscn" id="9_3bkbs"]
[ext_resource type="PackedScene" uid="uid://b347lo6c415bh" path="res://prefab/utils/WanderController.tscn" id="10_4r3ir"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8aljp"]
radius = 4.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s11kv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mghks"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_o3qdu"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s53fc"]
radius = 81.0555

[sub_resource type="Animation" id="Animation_ppetq"]
resource_name = "IdleDown"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_ak03g"]
resource_name = "IdleLeft"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_f1dw0"]
resource_name = "IdleRight"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 10]
}

[sub_resource type="Animation" id="Animation_cmi4s"]
resource_name = "IdleUp"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 6]
}

[sub_resource type="Animation" id="Animation_pj0ys"]
resource_name = "MoveDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_koe76"]
resource_name = "MoveLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_n6dma"]
resource_name = "MoveRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 8]
}

[sub_resource type="Animation" id="Animation_1l8hu"]
resource_name = "MoveUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 4]
}

[sub_resource type="Animation" id="Animation_0imbc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iwwvu"]
_data = {
"IdleDown": SubResource("Animation_ppetq"),
"IdleLeft": SubResource("Animation_ak03g"),
"IdleRight": SubResource("Animation_f1dw0"),
"IdleUp": SubResource("Animation_cmi4s"),
"MoveDown": SubResource("Animation_pj0ys"),
"MoveLeft": SubResource("Animation_koe76"),
"MoveRight": SubResource("Animation_n6dma"),
"MoveUp": SubResource("Animation_1l8hu"),
"RESET": SubResource("Animation_0imbc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_56fbo"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pkdhd"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dgk3k"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y4jrs"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_dccdl"]
blend_point_0/node = SubResource("AnimationNodeAnimation_56fbo")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_pkdhd")
blend_point_1/pos = Vector2(0, -0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_dgk3k")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_y4jrs")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lthqj"]
animation = &"MoveDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_70bqh"]
animation = &"MoveUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_belqf"]
animation = &"MoveRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5j833"]
animation = &"MoveLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_gdwxu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_lthqj")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_70bqh")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_belqf")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_5j833")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wgv0y"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tkpr8"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4wjcs"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_dccdl")
states/Idle/position = Vector2(397, 74)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_gdwxu")
states/Move/position = Vector2(620, 135)
transitions = ["Idle", "Move", SubResource("AnimationNodeStateMachineTransition_wgv0y"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_tkpr8")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_f0jby"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_chb8y"]
radius = 5.0
height = 20.0

[node name="EnemyFungy" type="CharacterBody2D"]
collision_layer = 5
script = ExtResource("1_tp4yf")
hit_effect_scene = ExtResource("2_kr1ik")
death_effect_scene = ExtResource("3_i8ij2")

[node name="EnemyHUD" parent="." instance=ExtResource("1_e25t5")]
offset_left = -14.0
offset_top = -49.0
offset_right = -14.0
offset_bottom = -49.0
scale = Vector2(0.5, 0.5)
enemy_stats_path = NodePath("../EnemyStats")

[node name="EnemyStats" type="Node" parent="."]
script = ExtResource("1_rni5g")
max_health = 8
damage = 2
MAX_SPEED = 50
ACCELERATION = 300
FRICTION = 200
WANDER_SPEED = 35
WANDER_TARGET_RANGE = 64
MIN_RANGE = 16
MAX_RANGE = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8aljp")

[node name="Sprite2D2" type="Sprite2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_snscc")
offset = Vector2(0, -12)
flip_h = true
hframes = 27

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_s11kv")

[node name="WeaponAngle" type="Marker2D" parent="."]

[node name="HurtBox" type="Area2D" parent="WeaponAngle"]
collision_layer = 0
collision_mask = 8
script = ExtResource("7_2ci0n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponAngle/HurtBox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_mghks")

[node name="PlayerDetector" parent="." instance=ExtResource("2_cuwi8")]
detector_shape = SubResource("CircleShape2D_o3qdu")

[node name="CollisionShape2D" parent="PlayerDetector" index="0"]
shape = SubResource("CircleShape2D_s53fc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iwwvu")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_4wjcs")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_f0jby")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Move/blend_position = Vector2(0, 0)

[node name="SoftCollision" parent="." instance=ExtResource("9_3bkbs")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_chb8y")

[node name="WanderController" parent="." instance=ExtResource("10_4r3ir")]

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(30, 0)
collision_mask = 128

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, 6)
target_position = Vector2(30, 0)
collision_mask = 128

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, -7)
target_position = Vector2(30, 0)
collision_mask = 128

[editable path="PlayerDetector"]
[editable path="SoftCollision"]
